--- a/TicketSystemWeb/Views/Ticket/View.cshtml
+++ b/TicketSystemWeb/Views/Ticket/View.cshtml
@@ -36,11 +36,8 @@
         <div class="row">
             <span asp-validation-for="TicketCategory">Categorie</span>
             <div class="col-sm-3">
-                <select asp-for="TicketCategory" asp-validation-for="ticketCategory" class="form-control" disabled>
-                    <option value="0">Windows</option>
-                    <option value="1">macOS</option>
-                    <option value="2">Printer</option>
-                    <option value="3">Interne systemen</option>
+                <select asp-for="TicketCategory" asp-items="Html.GetEnumSelectList<ticketCategories>()" class="form-control" disabled>
+                    <option selected="selected" value="">@ticketCategories.InterneSystemen</option>
                 </select>
             </div>
         </div>
@@ -48,11 +45,8 @@
         <div class="row">
             <span asp-validation-for="TicketCategory">Prioriteit</span>
             <div class="col-sm-3">
-                <select asp-for="TicketPriority" asp-validation-for="ticketPriority" class="form-control" disabled>
-                    <option value="0">Laag</option>
-                    <option value="1">Gemiddeld</option>
-                    <option value="2">Hoog</option>
-                    <option value="3">Kritiek</option>
+                <select asp-for="TicketPriority" asp-items="Html.GetEnumSelectList<ticketPriorities>()" class="form-control" disabled>
+                    <option selected="selected" value="">@ticketPriorities.Gemiddeld</option>
                 </select>
             </div>
         </div>
