Improvements, changes to folders.

--- a/TicketSystemWeb/Views/Device/View.cshtml
+++ b/TicketSystemWeb/Views/Device/View.cshtml
@@ -18,6 +18,10 @@
             <input asp-for="Brand" disabled class="form-control" />
         </div>
         <div class="mb-3">
+            <label asp-for="DeviceVersion">Versie</label>
+            <input asp-for="DeviceVersion" disabled class="form-control" />
+        </div>
+        <div class="mb-3">
             <label asp-for="SerialNumber">Serienummer</label>
             <input asp-for="SerialNumber" disabled class="form-control" />
         </div>
