--- a/TicketSystemWeb/Views/Ticket/Delete.cshtml
+++ b/TicketSystemWeb/Views/Ticket/Delete.cshtml
@@ -15,8 +15,8 @@
         <div class="row">
             <span asp-validation-for="TicketStatus">Status</span>
             <div class="col-sm-3">
-                <select asp-for="TicketStatus" asp-items="Html.GetEnumSelectList<ticketStatuses>()" class="form-control" disabled>
-                    <option selected="selected" value="">@ticketStatuses.Gesloten</option>
+                <select asp-for="TicketStatus" asp-items="Html.GetEnumSelectList<TicketStatuses>()" class="form-control" disabled>
+                    <option selected="selected" value="">@TicketStatuses.Gesloten</option>
                 </select>
             </div>
         </div>
@@ -39,8 +39,8 @@
         <div class="row">
             <span asp-validation-for="TicketCategory">Categorie</span>
             <div class="col-sm-3">
-                <select asp-for="TicketCategory" asp-items="Html.GetEnumSelectList<ticketCategories>()" class="form-control" disabled>
-                    <option selected="selected" value="">@ticketCategories.InterneSystemen</option>
+                <select asp-for="TicketCategory" asp-items="Html.GetEnumSelectList<TicketCategories>()" class="form-control" disabled>
+                    <option selected="selected" value="">@TicketCategories.InterneSystemen</option>
                 </select>
             </div>
         </div>
@@ -48,8 +48,8 @@
         <div class="row">
             <span asp-validation-for="TicketCategory">Prioriteit</span>
             <div class="col-sm-3">
-                <select asp-for="TicketPriority" asp-items="Html.GetEnumSelectList<ticketPriorities>()" class="form-control" disabled>
-                    <option selected="selected" value="">@ticketPriorities.Gemiddeld</option>
+                <select asp-for="TicketPriority" asp-items="Html.GetEnumSelectList<TicketPriorities>()" class="form-control" disabled>
+                    <option selected="selected" value="">@TicketPriorities.Gemiddeld</option>
                 </select>
             </div>
         </div>
