--- a/TicketSystemWeb/Views/Ticket/Edit.cshtml
+++ b/TicketSystemWeb/Views/Ticket/Edit.cshtml
@@ -14,7 +14,7 @@
             <div class="row">
                 <span asp-validation-for="TicketStatus">Status</span>
                 <div class="col-sm-3">
-                    <select asp-for="TicketStatus" asp-items="Html.GetEnumSelectList<ticketStatuses>()" class="form-control">
+                    <select asp-for="TicketStatus" asp-items="Html.GetEnumSelectList<TicketStatuses>()" class="form-control">
                         <option selected="selected">Selecteer een status</option>
                     </select>
                 </div>
@@ -34,7 +34,7 @@
         <div class="row">
             <span asp-validation-for="TicketCategory">Categorie</span>
             <div class="col-sm-3">
-                <select asp-for="TicketCategory" asp-items="Html.GetEnumSelectList<ticketCategories>()" class="form-control">
+                <select asp-for="TicketCategory" asp-items="Html.GetEnumSelectList<TicketCategories>()" class="form-control">
                     <option selected="selected">Selecteer een categorie</option>
                 </select>
             </div>
@@ -43,7 +43,7 @@
         <div class="row">
             <span asp-validation-for="TicketPriority">Prioriteit</span>
             <div class="col-sm-3">
-                <select asp-for="TicketPriority" asp-items="Html.GetEnumSelectList<ticketPriorities>()" class="form-control">
+                <select asp-for="TicketPriority" asp-items="Html.GetEnumSelectList<TicketPriorities>()" class="form-control">
                     <option selected="selected">Selecteer een prioriteit</option>
                 </select>
             </div>
