--- a/TicketSystemWeb/Views/Ticket/View.cshtml
+++ b/TicketSystemWeb/Views/Ticket/View.cshtml
@@ -5,7 +5,7 @@
     <input asp-for="TicketId" hidden />
     <div class="border p-3 mt-4">
         <div class="row pb-2">
-            <h2 class="text-primary">Ticket</h2>
+            <h2 class="text-primary">Ticket @Model.TicketId</h2>
             <hr />
         </div>
         <div asp-validation-summary="All"></div>
@@ -55,21 +55,38 @@
     </div>
 </form>
 <br />
-<form method="post" asp-action="CreateReply">
+<form method="post" asp-action="CreateComment" asp-route-id="@Model.TicketId">
     <div class="border p-3 mt-4">
         <div class="row pb-2">
             <h2>Reageren</h2>
             <hr />
         </div>
         <div class="mb-3">
-            <label asp-for="TicketSubject">Opmerking</label>
-            <textarea asp-for="TicketContent" class="form-control" rows="7"></textarea>
-            <textarea asp-for="TicketId" class="form-control" rows="7" hidden></textarea>
+            <label>Opmerking</label>
+            <textarea asp-for="CommentContent" placeholder="Vul hier je reactie in" class="form-control" rows="7"></textarea>
+            <input asp-for="TicketId" class="form-control" hidden>
             <br />
             <button type="submit" class="btn btn-success" style="width: 150px">Plaats reactie</button>
         </div>
     </div>
 </form>
+@foreach (var obj in Model.Comments)
+{
+    <br />
+    <div class="card">
+        <div class="card-header">
+            <h2>Reactie</h2>
+        </div>
+        <div class="card-body">
+            <label asp-for="TicketSubject">Opmerking</label>
+            <textarea disabled asp-for="@obj.CommentContent" class="form-control" rows="7"></textarea>
+            <p>Geplaatst door: Henk (@obj.CreatedDateTime)</p>
+            <button type="submit" class="btn btn-primary" style="width: 150px">Bewerken</button>
+            <button type="submit" class="btn btn-danger" style="width: 150px">Verwijderen</button>
+        </div>
+    </div>
+}
+
 @section Scripts {
 <partial name="_ValidationScriptsPartial" />
     }
