--- a/TicketSystemWeb/Views/Ticket/View.cshtml
+++ b/TicketSystemWeb/Views/Ticket/View.cshtml
@@ -55,6 +55,27 @@
     </div>
 </form>
 <br />
+<div class="border p-4 mt-4">
+    <div class="row pb-2">
+        <h2 class="text-primary">Betrokken apparaten</h2>
+        <ol class="list-group list-group-numbered">
+            <li class="list-group-item d-flex justify-content-between align-items-start">
+                <div class="ms-2 me-auto">
+                    <div class="fw-bold">iPhone 12</div>
+                    Merk: Apple, Versie: 11, Serienummer: 123456, OS: iOS 11.0
+                </div>
+                <span class="badge bg-primary rounded-pill">Toegevoegd op: 12-04-2022</span>
+            </li>
+            <li class="list-group-item d-flex justify-content-between align-items-start">
+                <div class="ms-2 me-auto">
+                    <div class="fw-bold">iPhone 12</div>
+                    Merk: Apple, Versie: 11, Serienummer: 123456, OS: iOS 11.0
+                </div>
+                <span class="badge bg-primary rounded-pill">Toegevoegd op: 12-04-2022</span>
+            </li>
+        </ol>
+    </div>
+</div>
 <form method="post" asp-action="CreateComment" asp-route-id="@Model.TicketId">
     <div class="border p-3 mt-4">
         <div class="row pb-2">
@@ -77,6 +98,7 @@
         <div class="card">
             <div class="card-header">
                 <h2>Reactie</h2>
+                <h6>Reactienummer: @obj.CommentId</h6>
             </div>
             <div class="card-body">
                 <label asp-for="TicketSubject">Opmerking</label>
